# C-Cpp-Exercises

./: CMakeLists.txt  README.md
C--Advanced/: Exersices.c  binary_search.c  countingFuncLinkedList.c  counting_func.c  linked_list.c
C--Basics/: APY_Calculator.c  ArrayStoring.c  Binary_to_Int.c  DataStream.c  DataStream_2.c  Fibonacci-series.c  Int_to_binary.c  Largest_Num.c  Square_check.c  Sum.c  Sum_Of_All_Digits.c  Sum_of_Numbers.c  Uppercase.c
Cpp_OOP_Exercise/: CMakeLists.txt  README.md
Cpp_OOP_Exercise/Header Files/: Auto.h  Engine.h  Motorcycle.h  Tire.h  Vehicle.h
Cpp_OOP_Exercise/Source Files/: Auto.cpp  Engine.cpp  Motorcycle.cpp  Source.cpp  Vehicle.cpp
TechnicalInformatik2/: Lab1.c  OSsynchronization .c
