cmake_minimum_required(VERSION 3.26)
project(C_Exercises C)

set(CMAKE_C_STANDARD 11)

add_executable(C_Exercises
#        C--Advanced/binary_search.c
#        C--Advanced/counting_func.c
#        C--Advanced/countingFuncLinkedList.c
#        C--Advanced/Exersices.c
#        C--Advanced/linked_list.c
#        C--Basics/APY_Calculator.c
#        C--Basics/ArrayStoring.c
#        C--Basics/Binary_to_Int.c
#        C--Basics/DataStream.c
#        C--Basics/DataStream_2.c
#        C--Basics/Fibonacci-series.c
#        C--Basics/Int_to_binary.c
#        C--Basics/Largest_Num.c
#        C--Basics/Square_check.c
#        C--Basics/Sum.c
#        C--Basics/Sum_Of_All_Digits.c
#        C--Basics/Sum_of_Numbers.c
#        C--Basics/Uppercase.c
        TechnicalInformatik2/Lab1.c)
