cmake_minimum_required(VERSION 3.26)
project(CG_LU2)

set(CMAKE_CXX_STANDARD 17)

add_executable(CG_LU2
        "Header Files/Engine.h"
        "Source files/Engine.cpp"
        "Header Files/Vehicle.h"
        "Header Files/Vehicle.h"
        "Header Files/Vehicle.h"
        "Source files/Vehicle.cpp"
        "Source files/Source.cpp"
        "Header Files/Auto.h"
        "Source files/Auto.cpp"
        "Header Files/Motorcycle.h"
        "Source files/Motorcycle.cpp"
)
